fix overflow: hidden; in safari

--- a/assets/scss/base/base.scss
+++ b/assets/scss/base/base.scss
@@ -16,6 +16,7 @@ html {
 }
 
 body {
+	position: relative;
 	height: 100vh;
 	outline: none;
 	font-family: 'MuseoSans', sans-serif;
